--- a/src/views/home.html
+++ b/src/views/home.html
@@ -63,62 +63,68 @@
                     <h3>Basado en tu última visita</h3>
                 </section>
 
-                <section> 
+                <section class="articulo"> 
                     <div>
                         <img src="/img/img-cafetera-moulinex.jpg" width="360" alt="Cafetera">
                     </div>
+                    <section class="caja">
                     <div>
                         <i class="fa-solid fa-truck stylesheet"></i>
                     </div>
-                    <div>
-                        <p class="precios">$6.770</p>
-                        <p class="descuentos">40% off</p>
-                        <h4 class="descripcion">Cafetera Moulinex</h4>
-                    </div>
+                        <div>
+                            <p class="precios">$6.770</p>
+                            <p class="descuentos">40% off</p>
+                            <h4 class="descripcion">Cafetera Moulinex</h4>
+                        </div>
+                    </section>
                 </section>
 
-                
-                <section>
+                <section class="articulo">
                     <div>
                         <img src="/img/img-macbook-pro-2019.jpg" width="360" alt="MacBook">
-                        
                     </div>
-                    <div>
-                        <i class="fa-solid fa-truck"></i>
-                    </div>
-                    <div>
-                        <p class="precios">$230.000</p>
-                        <p class="descuentos">20% off</p>
-                        <h4 class="descripcion">MacBook Pro 2019</h4>
-                    </div>
+                    <section class="caja">
+                        <div>
+                            <i class="fa-solid fa-truck"></i>
+                        </div>
+                        <div>
+                            <p class="precios">$230.000</p>
+                            <p class="descuentos">20% off</p>
+                            <h4 class="descripcion">MacBook Pro 2019</h4>
+                        </div>
+                    </section>
                 </section>
                 
-                <section>
+                <section class="articulo">
                     <div>
                         <img src="/img/img-samsung-galaxy-s10.jpg" width="360" alt="Teléfono Móvil Samsung Galaxy">
                     </div>
-                    <div>
-                        <i class="fa-solid fa-truck"></i>
-                    </div>
-                    <div>
-                        <p class="precios">$70.500</p>
-                        <p class="descuentos">10% off</p>
-                        <h4 class="descripcion">Teléfono móvil Samsung Galaxy S10</h4>
-                    </div>
+                    <section class="caja">
+                        <div>
+                            <i class="fa-solid fa-truck"></i>
+                        </div>
+                        <div>
+                            <p class="precios">$70.500</p>
+                            <p class="descuentos">10% off</p>
+                            <h4 class="descripcion">Teléfono móvil Samsung Galaxy S10</h4>
+                        </div>
+                    </section>
                 </section>
 
-                <section>
+                <section class="articulo">
                     <div>
                         <img src="/img/img-tv-samsung-smart.jpg" width="360" alt="SmartTv Samsung">
                     </div>
-                    <div>
-                        <i class="fa-solid fa-truck"></i>
-                    </div>
-                    <div>
-                        <p class="precios">$23.200</p>
-                        <p class="descuentos">5% off</p>
-                        <h4 class="descripcion">SmartTv Samsung 43"</h4>
-                    </div>
+                    <section class="caja">
+                        <div>
+                            <i class="fa-solid fa-truck"></i>
+                        </div>
+                        <div>
+                            <p class="precios">$23.200</p>
+                            <p class="descuentos">5% off</p>
+                            <h4 class="descripcion">SmartTv Samsung 43"</h4>
+                        </div>
+                    </section>
                 </section>
 
                 <!-- OFERTAS -->
