--- a/src/views/register.html
+++ b/src/views/register.html
@@ -18,7 +18,7 @@
 
             <script src="https://kit.fontawesome.com/971bd64f71.js" crossorigin="anonymous"></script>
 
-            <link rel="stylesheet" href="/css/style.css">
+            <link rel="stylesheet" href="/css/register.css">
 
 
     <title>Mercado Liebre</title>
@@ -62,24 +62,22 @@
 <!------------------------ NAV BAR ------------------------>
 <!--====================== OPCIONES MENÚ EXTRA ======================-->
         
-        <nav class="nav-bar">
-            <ul class="interaction-nav-client" style="list-style: none;">
-                <li> <a href="#">Ofertas</a> </li>
-                <li> <a href="#">Tiendas Oficiales</a> </li>
-                <li> <a href="#">Vender</a> </li>
-                <li> <a href="#">Ayuda</a> </li>
-            </ul>
+            <nav class="nav-bar">
+                <ul class="nav-bar-menu" style="list-style: none;">
+                    <li> <a href="#">Ofertas</a> </li>
+                    <li> <a href="#">Tiendas Oficiales</a> </li>
+                    <li> <a href="#">Vender</a> </li>
+                    <li> <a href="#">Ayuda</a> </li>
+                </ul>
 
 <!--====================== LOG IN / SING UP ======================-->
 
-            <ul class="nav-bar-menu-main" style="list-style: none;">
-                <li> <a href="/register">Créa tu cuenta</a> <i class="fa-regular fa-address-card"></i> </li>
-                <li> <a href="/login">Ingresá</a> <i class="fa-solid fa-right-to-bracket"></i> </li>
-                <li> <a href="#">Mis compras</a> <i class="fa-solid fa-basket-shopping"></i> </li>
-            </ul>
-        </nav>
-
-
+                <ul class="nav-bar-inicio" style="list-style: none;">
+                    <li> <a href="/register">Créa tu cuenta</a> <i class="fa-regular fa-address-card"></i> </li>
+                    <li> <a href="/login">Ingresá</a> <i class="fa-solid fa-right-to-bracket"></i> </li>
+                    <li> <a href="#">Mis compras</a> <i class="fa-solid fa-basket-shopping"></i> </li>
+                </ul>
+                </nav>
 
 <!------------------------ MENÚ HAMBURGUESA ------------------------>
 
@@ -87,8 +85,6 @@
             <i class="fas fa-bars"></i>
         </div>
     </header>
-
-
 
 <!------------------------ SING UP (register) ------------------------>
 
@@ -202,57 +198,48 @@
 <footer>
     <div class="basic-information">
 
-<!------------------------ PAGA CON TARJETA O EFECTIVO ------------------------>
-
-        <div>
-            <div class="card-icon-fa">
-                <i class="fa-solid fa-credit-card"></i>
-            </div>
+        <!-- Paga con tarjeta -->
+                        <div>
+                            <div class="card-icon-fa">
+                                <i class="fa-solid fa-credit-card"></i>
+                            </div>
+                        
+                            <div class="buy-cash-card">
+                                <h3 class="title-extra-info">Pagá con tarjeta o en efectivo</h3>
+                                <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!<p>
+                            </div>
+                        </div>
         
-            <div class="buy-cash-card">
-                <h3 class="title-extra-info">Pagá con tarjeta o en efectivo</h3>
-                <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!<p>
-            </div>
-        </div>
-
-
-
-<!------------------------ ENVIOS GRATIS ------------------------>
-
-        <div>
-            <div class="shipping-icon-fa">
-                <i class="fa-solid fa-gift"></i>
-            </div>
-
-            <div  class="free-shipping">
-                <h3 class="title-extra-info">Envío gratis desde $ 2.500</h3>
-                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
-            </div>
-        </div>
-
-
-
-<!------------------------ SEGURIDAD ------------------------>
-
-        <div>
-            <div class="security-icon-fa">
-                <i class="fa-solid fa-user-shield"></i>
-            </div>
-            
-            <div  class="main-security">
-                <h3 class="title-extra-info">Seguridad, de principio a fin</h3>
-                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
-            </div>
-        </div>
-    </div>
-
-
-
-<!------------------------ COPYRIGHT ------------------------>
-
-    <div class="copyright-information">
-        <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
-    </div>
+        <!-- Envios -->
+                        <div>
+                            <div class="shipping-icon-fa">
+                                <i class="fa-solid fa-gift"></i>
+                            </div>
+        
+                            <div  class="free-shipping">
+                                <h3 class="title-extra-info">Envío gratis desde $ 2.500</h3>
+                                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
+                            </div>
+                        </div>
+        
+        <!-- Seguridad -->
+                        <div>
+                            <div class="security-icon-fa">
+                                <i class="fa-solid fa-user-shield"></i>
+                            </div>
+                            
+                            <div  class="main-security">
+                                <h3 class="title-extra-info">Seguridad, de principio a fin</h3>
+                                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
+                            </div>
+                        </div>
+                    </div>
+        
+        <!-- Copyright -->
+                    <div class="copyright-information">
+                        <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+                    </div>
+        
 
 </footer>
 </body>
