--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,7 +82,7 @@ ul a{
     border-radius: 0.6rem;
 }
 
-.menssage-card{
+.mensaje{
     text-align: center;                                                     /*      ALINEACION HORIZONTAL EN BLOQUE TEXTO           */
     margin: 0.6rem;                                                         /*      MARGEN DE 0.6REM                                */
 }
@@ -104,13 +104,13 @@ ul a{
 
 /* ---------------------- MAIN ---------------------- */
 
-.art-product img{                                                           
+.productos img{                                                           
     width: 15rem;                                                           /*      ANCHO DE IMAGEN DE 15REM                        */
     height: 15rem;                                                          /*      ALTO DE IMAGEN DE 15REM                         */
     margin: 10px;                                                           /*      MARGEN DE IMAGEN DE 10px                        */
 }
 
-.price{
+.precio{
     font-size: 2.5vh;                                                       /*      TAMAÑO DE LETRA EN 2.5vh                        */
 }
 
@@ -120,7 +120,7 @@ ul a{
     padding-bottom: 0.6rem;                                                 /*      RELLENA INFERIOR DE 0.6REM                      */
 }
 
-.description{
+.descripcion{
     font-size: 16px;                                                        /*      TAMAÑO DE LETRA EN 16px                         */
     text-align: start;                                                      /*      ALINEACION HORIZONTAL INICIAL BLOQUE TEXTO      */
 }
@@ -131,7 +131,7 @@ ul a{
     padding: 0 20px 20px 20px;                                              /*      RELLENO CON 0px 20px 20px 20px                  */
 }
 
-.art-product{
+.productos{
     text-align: center;                                                     /*      ALINEACION HORIZONTAL EN BLOQUE TEXTO           */
     margin: 0 0.5rem;                                                       /*      MARGEN DE 0.5REM IZQ Y DER                      */
     width: 250px;                                                           /*      ANCHO DE 250px                                  */
@@ -156,7 +156,7 @@ ul a{
     bottom: 15px;                                                           /*      MUEVE ARRIBA 15px                                                       */
 }
 
-.based-on-pov, .section-offerts{
+.titulo {
     display: flex;                                                          /*      DISPLAY FLEX                                    */
     flex-wrap: wrap;                                                        /*      FLEX WRAP (on)                                  */
     justify-content: space-evenly;                                          /*      JUSTIFY-CONTENT (on)                            */    
@@ -399,7 +399,7 @@ footer{
 
 @media (min-width: 361px) and (max-width: 768px){
     /* -------- HEADER -------- */
-        .banner-img-ml, .banner-img-ml img{
+        .banner, .banner img{
             width: 100%;
         }
     
@@ -411,7 +411,7 @@ footer{
             margin-bottom: 10px;
         }
     
-        .nav-bar-menu-main{
+        .nav-bar-inicio{
             display: none;
         }
     
@@ -439,17 +439,18 @@ footer{
         }   
         
     /* -------- MAIN -------- */
-        .art-product{
+        .productos
+    {
             box-shadow: 0px 0px 8px rgb(100, 100, 100);
             margin: 20px;
             text-align: center;
         }
     
-        .description{
+        .descripcion{
             display: none;
         }
     
-        .price-discount{
+        .precio-descuento{
             display: flex;
             justify-content: space-between;
         }
@@ -472,7 +473,7 @@ footer{
 
 @media (min-width: 769px){
     /* -------- HEADER -------- */
-        .banner-img-ml, .banner-img-ml img{
+        .banner, .banner img{
             width: 100%;
         }
     
@@ -485,7 +486,7 @@ footer{
             justify-content: space-between;
         }
     
-        .nav-bar-menu-main{
+        .nav-bar-menu{
             display: flex;
             justify-content: flex-end;
         }
@@ -495,18 +496,19 @@ footer{
         }
     
     /* -------- MAIN -------- */
-        .art-product{
+        .productos
+    {
             box-shadow: 0px 0px 8px rgb(100, 100, 100);
             margin: 20px;
             text-align: center;
         }
     
-        .pov-msg, .offerts-msg{
+        .pov-msg, .seccion-oferta{
             text-align: center;
             margin: 2rem;
         }
     
-        .price-discount{
+        .precio-descuento{
             display: flex;
             justify-content: space-between;
         }
