--- a/src/views/home.html
+++ b/src/views/home.html
@@ -4,9 +4,7 @@
 <head>
 
 
-
-<!------------------------ METADATOS ------------------------>
-
+                <!-- METADATOS -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -28,17 +26,14 @@
 
 
 
-<!------------------------ LOGO ------------------------>
-
+<!-- Logo -->
         <div class="header-log-bar">
             <div class="logo">
                 <img src="/img/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
             </div>
-            
 
 
-<!------------------------ BARRA DE BUSQUEDA ------------------------>
-
+<!-- Barra de busqueda -->
             <div class="search-bar">
                     <form class="search-form" action="/search" method="get">
                             <label for="search-label">
@@ -49,30 +44,26 @@
             </div>
 
 
-
-<!------------------------ MENSAJE ------------------------>        
-            
-            <div class="menssage-card">
+<!-- Mensaje -->            
+            <div class="mensaje">
                 <p> <i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y sin tarjeta de crédito</p>
             </div>
         </div>
-            
 
-        
-<!------------------------ NAV BAR ------------------------>
-<!--====================== OPCIONES MENÚ EXTRA ======================-->
-        
+
+<!-- NAV BAR -->
+<!-- Menu -->        
         <nav class="nav-bar">
-            <ul class="interaction-nav-client" style="list-style: none;">
+            <ul class="nav-bar-menu" style="list-style: none;">
                 <li> <a href="#">Ofertas</a> </li>
                 <li> <a href="#">Tiendas Oficiales</a> </li>
                 <li> <a href="#">Vender</a> </li>
                 <li> <a href="#">Ayuda</a> </li>
             </ul>
 
-<!--====================== LOG IN / SING UP ======================-->
+<!-- Iniciar sesion / registrarse -->
 
-            <ul class="nav-bar-menu-main" style="list-style: none;">
+            <ul class="nav-bar-inicio" style="list-style: none;">
                 <li> <a href="/register">Créa tu cuenta</a> <i class="fa-regular fa-address-card"></i> </li>
                 <li> <a href="/login">Ingresá</a> <i class="fa-solid fa-right-to-bracket"></i> </li>
                 <li> <a href="#">Mis compras</a> <i class="fa-solid fa-basket-shopping"></i> </li>
@@ -80,96 +71,86 @@
         </nav>
 
 
-
-<!------------------------ MENÚ HAMBURGUESA ------------------------>
-
+<!-- Burger menu -->
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
         </div>
     </header>
 
 
-
-<!------------------------ BANNER ------------------------>
-
-        <section class="banner-img-ml">
-            <img src="/img/img-home-banner.jpg" alt="">
+<!-- Banner -->
+        <section class="banner">
+            <img src="/img/img-home-banner.jpg" alt="banner">
         </section>
 
-
-
-<!------------------------ MENSAJE ULTIMA VISITA ------------------------>
+                        <!-- MAIN -->
     <main>
         <h3 class="pov-msg">Basado en tu última visita</h3>
-        <section class="based-on-pov">
+        <section class="titulo">
 
-<!------------------------ PRODUCTO 1 ------------------------>
-
-                <article class="art-product">
+<!-- Cafetera -->
+                <article class="productos">
                     <img src="/img/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
                     <div class="box-article">
                         <div class="icon-truck">
                             <i class="fa-solid fa-truck"></i>
                         </div>
-                            <div class="price-discount">
-                                <p class="price">$6.770</p>
-                                <p class="discount">40% off</p>
+                            <div class="precio-descuento">
+                                <p class="precio">$6.770</p>
+                                <p class="descuento">40% off</p>
                             </div>
-                            <h4 class="description">Cafetera Moulinex</h4>
+                            <h4 class="descripcion">Cafetera Moulinex</h4>
                         </div>
                 </article>
 
 
 
-<!------------------------ PRODUCTO 2 ------------------------>
-
-                <article class="art-product">
+<!-- Macbook -->
+                <article class="productos">
                     <img src="/img/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
                         <div class="box-article">
                             <div class="icon-truck">
                                 <i class="fa-solid fa-truck"></i>
                             </div>
-                            <div class="price-discount">
-                                <p class="price">$230.000</p>
-                                <p class="discount">20% off</p>
+                            <div class="precio-descuento">
+                                <p class="precio">$230.000</p>
+                                <p class="descuento">20% off</p>
                             </div>
-                            <h4 class="description">MacBook Pro 2019</h4>
+                            <h4 class="descripcion">MacBook Pro 2019</h4>
                         </div>
                 </article>
 
 
 
-<!------------------------ PRODUCTO 3 ------------------------>
-
-                <article class="art-product">
+<!-- Samsung S10 -->
+                <article class="productos">
                     <img src="/img/img-samsung-galaxy-s10.jpg" alt="Cafetera Moulinex">
                         <div class="box-article">
                             <div class="icon-truck">
                                 <i class="fa-solid fa-truck"></i>
                             </div>
-                            <div class="price-discount">
-                                <p class="price">$70.500</p>
-                                <p class="discount">10% off</p>
+                            <div class="precio-descuento">
+                                <p class="precio">$70.500</p>
+                                <p class="descuento">10% off</p>
                             </div>
-                            <h4 class="description">Samsung Galaxy S10</h4>
+                            <h4 class="descripcion">Samsung Galaxy S10</h4>
                         </div>
                 </article>
 
 
 
-<!------------------------ PRODUCTO 4 ------------------------>
-
-                <article class="art-product">
+<!-- TV Smart -->
+                <article class="productos">
                     <img src="/img/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43">
                         <div class="box-article">
                             <div class="icon-truck">
                                 <i class="fa-solid fa-truck"></i>
                             </div>
-                            <div class="price-discount">
-                                <p class="price">$23.200</p>
-                                <p class="discount">5% off</p>
+                            <div class="precio-descuento">
+                                <p class="precio">$23.200</p>
+                                <p class="descuento">5% off</p>
                             </div>
-                            <h4 class="description">SmartTv Samsung 43'</h4>
+                            <h4 class="descripcion">SmartTv Samsung 43'</h4>
                         </div>
                 </article>
         </section>
@@ -178,22 +159,22 @@
 
 <!------------------------ MENSAJE OFERTAS ------------------------>
 
-        <h3 class="offerts-msg">Sección de Ofertas</h3>
-        <section class="section-offerts">
+        <h3 class="seccion-oferta">Sección de Ofertas</h3>
+        <section class="titulo">
 
 <!------------------------ PRODUCTO 1 OFERTA ------------------------>
 
-                <article class="art-product">
+                <article class="productos">
                     <img src="/img/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
                     <div class="box-article">
                         <div class="icon-truck">
                             <i class="fa-solid fa-truck"></i>
                         </div>
-                            <div class="price-discount">
-                                <p class="price">$6.770</p>
-                                <p class="discount">40% off</p>
+                            <div class="precio-descuento">
+                                <p class="precio">$6.770</p>
+                                <p class="descuento">40% off</p>
                             </div>
-                            <h4 class="description">Cafetera Moulinex</h4>
+                            <h4 class="descripcion">Cafetera Moulinex</h4>
                         </div>
                 </article>
 
@@ -201,17 +182,17 @@
 
 <!------------------------ PRODUCTO 2 OFERTA ------------------------>
 
-                <article class="art-product">
+                <article class="productos">
                     <img src="/img/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
                         <div class="box-article">
                             <div class="icon-truck">
                                 <i class="fa-solid fa-truck"></i>
                             </div>
-                            <div class="price-discount">
-                                <p class="price">$230.000</p>
-                                <p class="discount">20% off</p>
+                            <div class="precio-descuento">
+                                <p class="precio">$230.000</p>
+                                <p class="descuento">20% off</p>
                             </div>
-                            <h4 class="description">MacBook Pro 2019</h4>
+                            <h4 class="descripcion">MacBook Pro 2019</h4>
                         </div>
                 </article>
 
@@ -219,17 +200,17 @@
 
 <!------------------------ PRODUCTO 3 OFERTA ------------------------>
 
-                <article class="art-product">
+                <article class="productos">
                     <img src="/img/img-samsung-galaxy-s10.jpg" alt="Cafetera Moulinex">
                         <div class="box-article">
                             <div class="icon-truck">
                                 <i class="fa-solid fa-truck"></i>
                             </div>
-                            <div class="price-discount">
-                                <p class="price">$70.500</p>
-                                <p class="discount">10% off</p>
+                            <div class="precio-descuento">
+                                <p class="precio">$70.500</p>
+                                <p class="descuento">10% off</p>
                             </div>
-                            <h4 class="description">Samsung Galaxy S10</h4>
+                            <h4 class="descripcion">Samsung Galaxy S10</h4>
                         </div>
                 </article>
 
@@ -237,17 +218,17 @@
 
 <!------------------------ PRODUCTO 4 OFERTA ------------------------>
 
-                <article class="art-product">
+                <article class="productos">
                     <img src="/img/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43">
                         <div class="box-article">
                             <div class="icon-truck">
                                 <i class="fa-solid fa-truck"></i>
                             </div>
-                            <div class="price-discount">
-                                <p class="price">$23.200</p>
-                                <p class="discount">5% off</p>
+                            <div class="precio-descuento">
+                                <p class="precio">$23.200</p>
+                                <p class="descuento">5% off</p>
                             </div>
-                            <h4 class="description">SmartTv Samsung 43'</h4>
+                            <h4 class="descripcion">SmartTv Samsung 43'</h4>
                         </div>
                 </article>
         </section>
@@ -260,8 +241,7 @@
     <footer>
             <div class="basic-information">
 
-<!------------------------ PAGA CON TARJETA O EFECTIVO ------------------------>
-
+<!-- Paga con tarjeta -->
                 <div>
                     <div class="card-icon-fa">
                         <i class="fa-solid fa-credit-card"></i>
@@ -273,10 +253,7 @@
                     </div>
                 </div>
 
-
-
-<!------------------------ ENVIOS GRATIS ------------------------>
-
+<!-- Envios -->
                 <div>
                     <div class="shipping-icon-fa">
                         <i class="fa-solid fa-gift"></i>
@@ -288,10 +265,7 @@
                     </div>
                 </div>
 
-
-
-<!------------------------ SEGURIDAD ------------------------>
-
+<!-- Seguridad -->
                 <div>
                     <div class="security-icon-fa">
                         <i class="fa-solid fa-user-shield"></i>
@@ -304,10 +278,7 @@
                 </div>
             </div>
 
-
-
-<!------------------------ COPYRIGHT ------------------------>
-
+<!-- Copyright -->
             <div class="copyright-information">
                 <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
             </div>
