--- a/src/views/login.html
+++ b/src/views/login.html
@@ -18,7 +18,7 @@
 
             <script src="https://kit.fontawesome.com/971bd64f71.js" crossorigin="anonymous"></script>
 
-            <link rel="stylesheet" href="/css/style.css">
+            <link rel="stylesheet" href="/css/login.css">
 
 
     <title>Mercado Liebre</title>
