--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,399 +1,189 @@
-/* ---------------------- HTML: HOME.HTML ---------------------- */
-
-/* ---------------------- GENERAL ---------------------- */
-
 *{
-    font-family: 'Roboto', sans-serif;                                      /*      TIPO DE LETRA. ROBOTO                         */
-    margin: 0;                                                              /*      MARGEN GENERAL EN 0                             */
-    padding: 0;                                                             /*      RELLENO GENERAL EN 0                            */
-    box-sizing: border-box;                                                 /*      PADDING Y BORDER = CALCULO DEL ANCHO DE LA CAJA */
-}
+    font-family: 'Roboto', sans-serif;                                                               
+    margin: 0;                                                                                 
+    padding: 0;                                                             
+    box-sizing: border-box;}
 
 body{
-    background-color: #ebebeb;                                            /*      FONDO #ebebeb                                   */
-}
+background-color: #ebebeb;}
 
 p{
-    font-size: 14px;                                                        /*      TAMAÑO DE LETRA 14px                            */
-}
+    font-size: 14px;}
 
 h3{
-    font-size: 24px;                                                        /*      TAMAÑO DE LETRA 24px                            */
+    font-size: 24px;
 }
 
 a{
-    color: #000000;                                                       /*      COLOR  #000000                                  */
-    -webkit-text-stroke: #000000 0.2px;                                   /*      CONTORNO #000000 DE 0.2px A TEXTO               */
+    color: #000000;
+    -webkit-text-stroke: #000000 0.2px;
 }
 
-
-/* ---------------------- HEADER ---------------------- */
+/* Header */
 
 header{
-    background-color: #EAC926;                                            /*      FONDO #EAC92                                    */
+    background-color: #EAC926;
 }
 
 main{
-    width: 90%;                                                             /*      ANCHO Y TAMAÑO DEL MAIN EN 90% DEL CONTENEDOR   */
-    margin: auto;                                                           /*      MARGEN DEL MAIN AUTOMATICO                      */
+    width: 90%;
+    margin: auto;
 }
 
 .logo{
-    height: auto;                                                            /*      ANCHO A LA IMAGEN 125px                         */
+    height: auto;
     width: 15%;
 }
 
 .burger-menu{
-    margin: auto;                                                     /*      ALINEA AL CENTRO                                */
+    margin: auto;
     text-align: center;
     font-size: 1.5rem;
 }
 
 
 .fa-bars{
-    text-decoration: solid;                                                 /*      LINEA SIMPLE                                    */
-    padding: 10px;                                                          /*      RELLENA CON 10px                               */
-    color: #ffff;                                                         /*      COLOR #ffff (blanco)                            */
-    background-color: #1259c3;                                            /*      RELLENO DE FONDO #1259c3                        */
-    border-radius: 10px;                                                  /*      BORDE REDONDO DE 10px                     */
+    text-decoration: solid;
+    color: #ffff;
+    background-color: #1259c3;
+    border-radius: 10px;
 }
 
 ul a{
-    text-decoration: none;                                                  /*      ELIMINA LA VIÑETA DE LA LISTA                   */
+    text-decoration: none;
 }
 
 .search-input, .search-button{
-    border: none;                                                           /*      ELIMINA EL BORDE                                */
-    padding: 0.5rem;                                                        /*      RELLENA CON 0.5REM                              */
-    background-color: #ffff;                                              /*      FONDO #ffff (blanco)                            */ 
-    cursor: pointer;                                                        /*      CURSOR ESTILO MANO SOBRE EL INPUT               */
+    border: none;
+    padding: 0.5rem;
+    background-color: #ffff;
+    cursor: pointer;
     border-radius: 0.6rem;
 }
 
 .search-form{
-    background-color: #ffff;                                              /*      FONDO #ffff (blanco)                            */
-    border-radius: 0.6rem;                                                  /*      BORDE REDONDO DE 0.6REM                         */
-    text-align: center;                                                     /*      ALINEACION HORIZONTAL EN BLOQUE TEXTO           */
+    background-color: #ffff;
+    border-radius: 0.6rem;
+    text-align: center;
 }
 
 .search-input{
-    outline: none;                                                          /*      ELIMINA EL BORDE NEGRO DEL INPUT                */
-    width: 280px;                                                           /*      ANCHO DE 280px                                  */
+    outline: none;
+    width: 280px;
     border-radius: 0.6rem;
 }
 
 .mensaje{
-    text-align: center;                                                     /*      ALINEACION HORIZONTAL EN BLOQUE TEXTO           */
-    margin: 0.6rem;                                                         /*      MARGEN DE 0.6REM                                */
+    text-align: center;
+    margin: 0.6rem;
 }
 
-.header-log-bar{
-    display: flex;                                                          /*      DISPLAY FLEX                                    */
-    flex-wrap: wrap;                                                        /*      FLEX WRAP (on)                                  */
-    padding: 0.6rem;                                                        /*      RELLENA CON 0.6REM                              */
-    justify-content: space-between;                                         /*      JUSTIFY-CONTENT (on)                            */    
+.header-logo{
+    display: flex;
+    flex-wrap: wrap;    
+    padding: 0.6rem;  
+    justify-content: space-between;
 }
 
 .nav-bar li{
-    margin: 0 1rem;                                                         /*      MARGEN DE 0 0.6REM IZQ Y DER                    */
-    margin: 1.5rem;                                                         /*      MARGEN GENERAL DE 1.5REM                        */
-    font-size: 1.8vh;                                                       /*      TAMAÑO DE LETRA 1.8vh                           */
+    margin: 0 1rem;
+    margin: 1.5rem;
+    font-size: 1.8vh;
 }
 
-
-
-/* ---------------------- MAIN ---------------------- */
+                                                        /* Main */
 
 .productos img{                                                           
-    width: 15rem;                                                           /*      ANCHO DE IMAGEN DE 15REM                        */
-    height: 15rem;                                                          /*      ALTO DE IMAGEN DE 15REM                         */
-    margin: 10px;                                                           /*      MARGEN DE IMAGEN DE 10px                        */
+    width: 15rem; 
+    height: 15rem;
+    margin: 10px;
 }
 
 .precio{
-    font-size: 2.5vh;                                                       /*      TAMAÑO DE LETRA EN 2.5vh                        */
+    font-size: 2.5vh;
 }
 
-.discount{
-    font-size: 2.5vh;                                                       /*      TAMAÑO DE LETRA EN 2.5vh                        */
-    color: #39b54a;                                                       /*      COLOR #39b54a                                   */
-    padding-bottom: 0.6rem;                                                 /*      RELLENA INFERIOR DE 0.6REM                      */
+.descuento{
+    font-size: 2.5vh; 
+    color: #39b54a;  
+    padding-bottom: 0.6rem;
 }
 
 .descripcion{
-    font-size: 16px;                                                        /*      TAMAÑO DE LETRA EN 16px                         */
-    text-align: start;                                                      /*      ALINEACION HORIZONTAL INICIAL BLOQUE TEXTO      */
+    font-size: 16px; 
+    text-align: start;
 }
 
 
-.box-article{
-    border-top: 1px solid #ebebeb;                                        /*      BORDE SOLIDO DE 1px COLOR #ebebeb               */
-    padding: 0 20px 20px 20px;                                              /*      RELLENO CON 0px 20px 20px 20px                  */
+.articulo{
+    border-top: 1px solid #ebebeb;
+    padding: 0 20px 20px 20px;
 }
 
 .productos{
-    text-align: center;                                                     /*      ALINEACION HORIZONTAL EN BLOQUE TEXTO           */
-    margin: 0 0.5rem;                                                       /*      MARGEN DE 0.5REM IZQ Y DER                      */
-    width: 250px;                                                           /*      ANCHO DE 250px                                  */
-    background-color: #ffff;                                              /*      FONDO #ffff (blanco)                            */
+    text-align: center;
+    margin: 0 0.5rem; 
+    width: 250px;
+    background-color: #ffff;
 }
 
 
 .fa-truck{
-    color: #39b54a;                                                       /*      COLOR #39b54a                                   */
+    color: #39b54a;
 }
 
 .icon-truck{
-    display: block;                                                         /*      OCUPARA TODO EL ESPACIO DISPONIBLE Y MANDARA ABAJO AL SIGUIENTE ITEM    */
-    padding: 0.3rem;                                                        /*      RELLENA CON 0.3REM                                                      */
-    width: 1.9rem;                                                          /*      ANCHO DE 1.9REM                                                         */
-    height: 1.9rem;                                                         /*      ALTO DE 1.9REM                                                          */
-    border: 1px solid #39b54a;                                            /*      BORDE SOLIDO DE 1px COLOR #39b54a                                       */
-    background-color: #ffff;                                              /*      FONDO #ffff (blanco)                                                    */
-    border-radius: 50%;                                                     /*      BORDE REDONDO DE 50% DEL CONTENEDOR                                     */
-    position: relative;                                                     /*      UBICA EN POSICION RELATIVA                                              */
-    left: 185px;                                                            /*      MUEVE A LA IZQ 185px                                                    */
-    bottom: 15px;                                                           /*      MUEVE ARRIBA 15px                                                       */
+    display: block;
+    padding: 0.3rem;
+    width: 1.9rem;
+    height: 1.9rem;
+    border: 1px solid #39b54a;
+    background-color: #ffff;
+    border-radius: 50%; 
+    position: relative;
+    left: 185px;
+    bottom: 15px;
 }
 
 .titulo {
-    display: flex;                                                          /*      DISPLAY FLEX                                    */
-    flex-wrap: wrap;                                                        /*      FLEX WRAP (on)                                  */
-    justify-content: space-evenly;                                          /*      JUSTIFY-CONTENT (on)                            */    
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
-
-
-/* ---------------------- FOOTER ---------------------- */
+                                                    /* Footer */
 
 footer{
-    background-color: #ffff;                                              /*      FONDO #ffff (blanco)                            */
-    margin: 0.5rem;                                                         /*      MARGEN DE 0.5REM                                */
+    background-color: #ffff;
+    margin: 0.5rem; 
 }
 
 .basic-information{
-    text-align: center;                                                     /*      ALINEACION HORIZONTAL EN BLOQUE TEXTO           */
-    margin: 1.2rem;                                                         /*      MARGEN DE 1.2REM                                */
+    text-align: center;  
+    margin: 1.2rem;  
 }
 
 .card-icon-fa, .shipping-icon-fa, .security-icon-fa{
-    font-size: 32px;                                                        /*      TAMAÑO DE LETRA EN 32px                         */
-    margin-bottom: 0.6rem;                                                  /*      MARGEN INFERIOR DE 0.6REM                       */
-    color: #1259c3;                                                       /*      COLOR #1259c3                                   */
-    padding-top: 50px;                                                      /*      RELLENO ARRIBA CON 50px                         */
+    font-size: 32px;  
+    margin-bottom: 0.6rem; 
+    color: #1259c3; 
+    padding-top: 50px;
 }
 
 .buy-cash-card, .free-shipping, .main-security, .copyright-information{
-    color: #666;                                                          /*      COLOR #666                                      */
-    padding: 1rem;                                                          /*      RELLENA CON 1REM                                */
-    text-align: center;                                                     /*      ALINEA AL CENTRO                                */
-    font-weight: 900;                                                       /*      GROSOR DE TEXTO 900                             */
+    color: #666;   
+    padding: 1rem;
+    text-align: center;
+    font-weight: 900;
 }
 
 .title-extra-info{
-    -webkit-text-stroke: #000000 0.1px;                                   /*      CONTORNO #000000 DE 0.2px A TEXTO               */
+    -webkit-text-stroke: #000000 0.1px;
 }
 
 .copyright-information{
     padding-top: 90px;
 }
-
-
-
-/* ---------------------- HTML: REGISTER.HTML ---------------------- */
-
-/* ---------------------- MAIN ---------------------- */
-
-.general-form-div{
-    display: flex;
-    align-content: center;
-    justify-content: flex-end;
-    flex-direction: column;
-    flex-wrap: wrap;
-    padding: 20px;
-    padding-top: 30px;
-    border: none;
-    background-color: #ebebeb;
-}
-
-#n-s-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-#user-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-#mail-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-#bday-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-    padding-right: 10px;
-}
-
-#adress-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-#password-register-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-#confirm-password{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-#submit-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-#reset-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-.name-surname-form-box, .username-form-box, .email-form-box, .birthday-form-box, .adress-form-box, .preferences-form-box, .interest-user-form-box .user-image-form-box, .password-form-box-register-section, .confirm-password-form-box-register-section, .submit-go-principal-page-form-box, .reset-form-box{
-    padding: 15px 0;
-}
-
-.electro-i, .moda-i, .hogar-i, .jugueteria-i, .vida-sana-i{
-    padding: 15px 0;
-}
-
-.buy, .sell{
-    padding: 15px 0;
-}
-
-#buy-form, #sell-form{
-    border-radius: 5px;
-}
-
-.birthday-msg, .preferences-msg, .interest-msg{
-    padding: 12px 0;
-    -webkit-text-stroke: #000000 0.5px;
-}
-
-.buy-sell-form-modify{
-    display: flex;
-    justify-content: space-evenly;
-}
-
-
-
-/* ---------------------- HTML: LOGIN.HTML ---------------------- */
-
-/* ---------------------- MAIN ---------------------- */
-
-.user-form-box, .password-form-box, .submit-button-box{
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-    padding-top: 30px;
-    border: none;
-    background-color: #ebebeb;
-}
-
-#user-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-#password-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #ffff;
-    border: none;
-    padding-left: 15px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-#submit-form{
-    width: 550px;
-    height: 40px;
-    font-size: 16px;
-    border-radius: 0.5rem;
-    background-color: #1259c3;
-    color: #ffff;
-    outline: none;
-    border: none;
-    text-align: center;
-    -webkit-text-stroke:black 0.2px;
-    box-shadow: 0 0 2.5px rgb(100, 100, 100);
-}
-
-
 
 /* ---------------------- MEDIA QUERY ( mobile ) ---------------------- */
 
@@ -523,13 +313,3 @@ footer{
             padding-bottom: 15px;
         }
     }
-
-
-    /* FALTA
-    
-    -ARREGLAR EL TAMAÑO DEL LOGO
-    -ARREGLAR EL TAMAÑO DE LAS LETRAS
-    -ARREGLAR EL BURGER MENU (EN LOG IN Y REGISTER (SI O SI))
-    -CLASE N6 (TRANSICIONES Y MOVIMIENTOS)
-    -CORREGIR DETALLES
-    */
