--- a/src/views/home.html
+++ b/src/views/home.html
@@ -27,7 +27,7 @@
 
 
 <!-- Logo -->
-        <div class="header-log-bar">
+        <div class="header-logo">
             <div class="logo">
                 <img src="/img/logo-mercado-liebre.svg" alt="Logo Mercado Liebre">
             </div>
@@ -63,7 +63,7 @@
 
 <!-- Iniciar sesion / registrarse -->
 
-            <ul class="nav-bar-inicio" style="list-style: none;">
+            <ul class="nav-bar-menu" style="list-style: none;">
                 <li> <a href="/register">Créa tu cuenta</a> <i class="fa-regular fa-address-card"></i> </li>
                 <li> <a href="/login">Ingresá</a> <i class="fa-solid fa-right-to-bracket"></i> </li>
                 <li> <a href="#">Mis compras</a> <i class="fa-solid fa-basket-shopping"></i> </li>
@@ -91,7 +91,7 @@
 <!-- Cafetera -->
                 <article class="productos">
                     <img src="/img/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
-                    <div class="box-article">
+                    <div class="articulo">
                         <div class="icon-truck">
                             <i class="fa-solid fa-truck"></i>
                         </div>
@@ -108,7 +108,7 @@
 <!-- Macbook -->
                 <article class="productos">
                     <img src="/img/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
-                        <div class="box-article">
+                        <div class="articulo">
                             <div class="icon-truck">
                                 <i class="fa-solid fa-truck"></i>
                             </div>
@@ -125,7 +125,7 @@
 <!-- Samsung S10 -->
                 <article class="productos">
                     <img src="/img/img-samsung-galaxy-s10.jpg" alt="Cafetera Moulinex">
-                        <div class="box-article">
+                        <div class="articulo">
                             <div class="icon-truck">
                                 <i class="fa-solid fa-truck"></i>
                             </div>
@@ -142,7 +142,7 @@
 <!-- TV Smart -->
                 <article class="productos">
                     <img src="/img/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43">
-                        <div class="box-article">
+                        <div class="articulo">
                             <div class="icon-truck">
                                 <i class="fa-solid fa-truck"></i>
                             </div>
@@ -166,7 +166,7 @@
 
                 <article class="productos">
                     <img src="/img/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex">
-                    <div class="box-article">
+                    <div class="articulo">
                         <div class="icon-truck">
                             <i class="fa-solid fa-truck"></i>
                         </div>
@@ -184,7 +184,7 @@
 
                 <article class="productos">
                     <img src="/img/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019">
-                        <div class="box-article">
+                        <div class="articulo">
                             <div class="icon-truck">
                                 <i class="fa-solid fa-truck"></i>
                             </div>
@@ -202,7 +202,7 @@
 
                 <article class="productos">
                     <img src="/img/img-samsung-galaxy-s10.jpg" alt="Cafetera Moulinex">
-                        <div class="box-article">
+                        <div class="articulo">
                             <div class="icon-truck">
                                 <i class="fa-solid fa-truck"></i>
                             </div>
@@ -220,7 +220,7 @@
 
                 <article class="productos">
                     <img src="/img/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43">
-                        <div class="box-article">
+                        <div class="articulo">
                             <div class="icon-truck">
                                 <i class="fa-solid fa-truck"></i>
                             </div>
