--- a/src/views/register.html
+++ b/src/views/register.html
@@ -72,7 +72,7 @@
 
 <!--====================== LOG IN / SING UP ======================-->
 
-                <ul class="nav-bar-inicio" style="list-style: none;">
+                <ul class="nav-bar-menu" style="list-style: none;">
                     <li> <a href="/register">Créa tu cuenta</a> <i class="fa-regular fa-address-card"></i> </li>
                     <li> <a href="/login">Ingresá</a> <i class="fa-solid fa-right-to-bracket"></i> </li>
                     <li> <a href="#">Mis compras</a> <i class="fa-solid fa-basket-shopping"></i> </li>
